<resources>
    <string name="app_name">842 Scouting</string>

    <string name="portcullis">Portcullis</string>
    <string name="cheval_de_frise">Cheval de Frise</string>
    <string name="moat">Moat</string>
    <string name="ramparts">Ramparts</string>
    <string name="drawbridge">Drawbridge</string>
    <string name="sally_port">Sally Port</string>
    <string name="rock_wall">Rock Wall</string>
    <string name="rough_terrain">Rough Terrain</string>
    <string name="low_bar">Low Bar</string>
    <string name="add">+</string>
    <string name="sub">-</string>

    <string-array name="match_level">
        <item>Qualifier</item>
        <item>Playoffs</item>
    </string-array>

    <string-array name="alliances">
        <item>Blue</item>
        <item>Red</item>
    </string-array>

    <string-array name="yes_no">
        <item>No</item>
        <item>Yes</item>
    </string-array>

    <string-array name="defences">
        <item>None</item>
        <item>Portcullis</item>
        <item>Cheval de Frise</item>
        <item>Moat</item>
        <item>Ramparts</item>
        <item>Drawbridge</item>
        <item>Sally Port</item>
        <item>Rough Terrain</item>
        <item>Low Bar</item>
    </string-array>
    
    <string-array name="partial_yes_no">
        <item>No</item>
        <item>Partial</item>
        <item>Yes</item>
    </string-array>

    <string-array name="carded">
        <item>No</item>
        <item>Yellow</item>
        <item>Red</item>
    </string-array>

    <string-array name="no_auto_tele_both">
        <item>No</item>
        <item>Auto</item>
        <item>Tele</item>
        <item>Both</item>
    </string-array>

    <string-array name="weight">
        <item>&lt;50</item>
        <item>50&#8211;60</item>
        <item>61&#8211;70</item>
        <item>71&#8211;80</item>
        <item>81&#8211;90</item>
        <item>91&#8211;100</item>
        <item>101&#8211;110</item>
        <item>111&#8211;120</item>
    </string-array>

    <string-array name="driver_experience">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="wheels">
        <item>Traction</item>
        <item>Pneumatic</item>
        <item>Mechanum</item>
        <item>Omni</item>
        <item>Tank</item>
        <item>Hybrid</item>
    </string-array>

    <string-array name="shooter">
        <item>None</item>
        <item>Catapult</item>
        <item>Wheels</item>
        <item>Turret</item>
    </string-array>

    <string-array name="speed">
        <item>1&#8211;15</item>
        <item>16&#8211;30</item>
        <item>31&#8211;45</item>
    </string-array>


    <string-array name="default_team_numbers">
        <item>842</item>
        <item>8</item>
        <item>4</item>
        <item>2</item>
    </string-array>
    <string-array name="default_match_numbers">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
</resources>
