<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content" android:layout_height="wrap_content">
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:padding="5dip"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout android:layout_column="0">
                <TextView
                    android:id="@+id/pitCreate_button_robot_cap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@color/yellow2"
                    android:text="Click here to take a picture of the robot."
                    android:textAlignment="center"
                    android:textColor="@color/blue"
                    android:textSize="9pt" />
                <ImageView
                    android:id="@+id/pitCreate_image_view_robot"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:layout_below="@+id/pitCreate_button_robot_cap"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="5dp" />
            </RelativeLayout>
        </TableRow>

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:progressDrawable="@drawable/divider_bar"/>

        <TableLayout
            android:background="@color/colorPrimaryDark2">
            <TableRow>
                <TextView
                    android:text="Driver Experience:"/>
                <Spinner android:id="@+id/pitCreate_spinner_driver_xp" />
                <TextView
                    android:text="years"/>

            </TableRow>
        </TableLayout>

        <TableLayout>
            <TableRow>
                <TextView android:text="Wheel Type:" />
                <Spinner android:id="@+id/pitCreate_spinner_wheel_type" />
            </TableRow>
        </TableLayout>

        <TableLayout
            android:background="@color/colorPrimaryDark2">
            <TableRow>
                <TextView android:text="Robot Weight:" />
                <Spinner android:id="@+id/pitCreate_spinner_weight" />
            </TableRow>
        </TableLayout>

        <TableLayout>

            <TableRow>

                <TextView android:text="Shooter Type:" />

                <Spinner android:id="@+id/pitCreate_spinner_shooter" />
            </TableRow>
        </TableLayout>

        <TableLayout android:background="@color/colorPrimaryDark2">

            <TableRow>

                <TextView android:text="Climbs Tower:" />

                <Spinner android:id="@+id/pitCreate_spinner_tower_climb" />
            </TableRow>
        </TableLayout>

        <TableLayout>
            <TableRow>
                <TextView android:text="Climb Speed:" />
                <Spinner android:id="@+id/pitCreate_spinner_climb_speed" />
                <TextView
                    android:text="seconds"/>
            </TableRow>
        </TableLayout>


        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:progressDrawable="@drawable/divider_bar"/>

        <TextView android:text="Defence Climb"/>

        <TableLayout>
            <TableRow
                android:background="@color/colorPrimaryDark2">
                <TextView android:text="@string/portcullis"/>
                <Spinner android:id="@+id/pitCreate_spinner_portcullis" />
            </TableRow>
        </TableLayout>

        <TableLayout>
            <TableRow>
                <TextView android:text="@string/cheval_de_frise"/>

                <Spinner android:id="@+id/pitCreate_spinner_cheval_de_frise" />
            </TableRow>
        </TableLayout>

        <TableLayout>
            <TableRow
                android:background="@color/colorPrimaryDark2">
                <TextView android:text="@string/moat"/>

                <Spinner android:id="@+id/pitCreate_spinner_moat" />
            </TableRow>
        </TableLayout>

        <TableLayout>
            <TableRow>
                <TextView android:text="@string/ramparts"/>

                <Spinner android:id="@+id/pitCreate_spinner_ramparts" />
            </TableRow>
        </TableLayout>

        <TableLayout>
            <TableRow
                android:background="@color/colorPrimaryDark2">
                <TextView android:text="@string/drawbridge"/>
                <Spinner android:id="@+id/pitCreate_spinner_drawbridge" />
            </TableRow>
        </TableLayout>
        <TableLayout>
            <TableRow
                android:layout_width="match_parent">
                <TextView android:text="@string/sally_port"/>

                <Spinner android:id="@+id/pitCreate_spinner_sally_port" />
            </TableRow>
        </TableLayout>
        <TableLayout>
            <TableRow
                android:layout_width="match_parent"
                android:background="@color/colorPrimaryDark2">
                <TextView android:text="@string/rock_wall"/>

                <Spinner android:id="@+id/pitCreate_spinner_rock_wall" />
            </TableRow>
        </TableLayout>
        <TableLayout>
            <TableRow
                android:layout_width="match_parent">
                <TextView android:text="@string/rough_terrain"/>

                <Spinner android:id="@+id/pitCreate_spinner_rough_terrain" />
            </TableRow>
        </TableLayout>
        <TableLayout>
            <TableRow
                android:layout_width="match_parent"
                android:background="@color/colorPrimaryDark2">
                <TextView android:text="@string/low_bar"/>

                <Spinner android:id="@+id/pitCreate_spinner_low_bar" />
            </TableRow>
        </TableLayout>

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:progressDrawable="@drawable/divider_bar" />


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/pitCreate_input_comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Comments:" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/pitCreate_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="SUBMIT TEAM" />

    </TableLayout>
</ScrollView>