<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip"
        android:stretchColumns="*">

        <RelativeLayout>

            <TextView
                android:id="@+id/pit_view_title_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="TEAM NUMBER"
                android:textAlignment="center"
                android:textColor="@color/carbon_black3"
                android:textSize="25dip" />
        </RelativeLayout>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout android:layout_column="0">

                <TextView
                    android:id="@+id/pit_view_robot_cap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="Image of the robot."
                    android:textAlignment="center" />

                <ImageView
                    android:id="@+id/pit_view_image_view_robot"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_below="@+id/pit_view_robot_cap"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>
        </TableRow>

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:progressDrawable="@drawable/divider_bar" />

        <TableLayout android:background="@color/colorPrimaryDark2">

            <TableRow>

                <TextView android:text="Driver Experience:" />

                <TextView
                    android:id="@+id/pit_view_driver_xp"
                    android:text="REPLACE" />

                <TextView android:text="years" />

            </TableRow>
        </TableLayout>

        <TableLayout>

            <TableRow>

                <TextView android:text="Wheel type:" />

                <TextView
                    android:id="@+id/pit_view_wheel_type"
                    android:text="REPLACE" />
            </TableRow>
        </TableLayout>

        <TableLayout android:background="@color/colorPrimaryDark2">

            <TableRow>

                <TextView android:text="Climbs tower:" />

                <TextView
                    android:id="@+id/pit_view_tower_climb"
                    android:text="REPLACE" />
            </TableRow>
        </TableLayout>

        <TableLayout>

            <TableRow>

                <TextView android:text="Climb speed:" />

                <TextView
                    android:id="@+id/pit_view_climb_speed"
                    android:text="REPLACE" />
            </TableRow>

            <TableLayout
                android:background="@color/colorPrimaryDark2"
                android:stretchColumns="1,2,3">

                <TableRow>

                    <TextView android:text="Robot Dimensions:" />

                    <TextView
                        android:id="@+id/pit_view_robot_length"
                        android:text="LENGTH" />

                    <TextView
                        android:id="@+id/pit_view_robot_width"
                        android:text="WIDTH" />

                    <TextView
                        android:id="@+id/pit_view_robot_height"
                        android:text="HEIGHT" />
                </TableRow>
            </TableLayout>
        </TableLayout>

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:progressDrawable="@drawable/divider_bar" />

        <TextView
            android:background="@color/blue2"
            android:text="Defence Climb"
            android:textAlignment="center" />

        <TableLayout>

            <TableRow android:background="@color/colorPrimaryDark2">

                <TextView android:text="@string/portcullis" />

                <TextView
                    android:id="@+id/pit_view_portcullis"
                    android:text="REPLACE" />
            </TableRow>
        </TableLayout>

        <TableLayout>

            <TableRow>

                <TextView android:text="@string/cheval_de_frise" />

                <TextView
                    android:id="@+id/pit_view_cheval_de_frise"
                    android:text="REPLACE" />
            </TableRow>
        </TableLayout>

        <TableLayout>

            <TableRow android:background="@color/colorPrimaryDark2">

                <TextView android:text="@string/moat" />

                <TextView
                    android:id="@+id/pit_view_moat"
                    android:text="REPLACE" />
            </TableRow>
        </TableLayout>

        <TableLayout>

            <TableRow>

                <TextView android:text="@string/ramparts" />

                <TextView
                    android:id="@+id/pit_view_ramparts"
                    android:text="REPLACE" />
            </TableRow>
        </TableLayout>

        <TableLayout>

            <TableRow android:background="@color/colorPrimaryDark2">

                <TextView android:text="@string/drawbridge" />

                <TextView
                    android:id="@+id/pit_view_drawbridge"
                    android:text="REPLACE" />
            </TableRow>
        </TableLayout>

        <TableLayout>

            <TableRow android:layout_width="match_parent">

                <TextView android:text="@string/sally_port" />

                <TextView
                    android:id="@+id/pit_view_sally_port"
                    android:text="REPLACE" />
            </TableRow>
        </TableLayout>

        <TableLayout>

            <TableRow
                android:layout_width="match_parent"
                android:background="@color/colorPrimaryDark2">

                <TextView android:text="@string/rock_wall" />

                <TextView
                    android:id="@+id/pit_view_rock_wall"
                    android:text="REPLACE" />
            </TableRow>
        </TableLayout>

        <TableLayout>

            <TableRow android:layout_width="match_parent">

                <TextView android:text="@string/rough_terrain" />

                <TextView
                    android:id="@+id/pit_view_rough_terrain"
                    android:text="REPLACE" />
            </TableRow>
        </TableLayout>

        <TableLayout>

            <TableRow
                android:layout_width="match_parent"
                android:background="@color/colorPrimaryDark2">

                <TextView android:text="@string/low_bar" />

                <TextView
                    android:id="@+id/pit_view_low_bar"
                    android:text="REPLACE" />
            </TableRow>
        </TableLayout>

        <TextView android:text="\n\n" />

        <Button
            android:id="@+id/pit_view_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="SUBMIT TEAM" />

    </TableLayout>
</ScrollView>